--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,37 @@
-:root[data-theme="dark"] {
-  --pico-background-color: hsl(225, 38%, 10%);
-  --or: hsl(220, 9%, 40%);
+html {scroll-behavior: smooth;}
+body {
+  margin: 0;
+  padding: 0;
 }
-
-html {
-  scroll-behavior: smooth;
-}
-
-:focus-visible {
-  /* outline: 1px solid var(--pico-primary); */
-  outline-offset: 1px;
-}
-
+:focus-visible {outline-offset: 1px;}
 section {
   /* ensures section appears below nav */
   scroll-margin-top: 91px;
 }
-
+#edu-exp {
+  text-align: center;
+  text-decoration: underline;
+  margin: 0 auto;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease, border-radius 0.3s ease;
+  padding: 5px;
+  border-radius: 25px;
+  position: relative;
+}
+/* Hover effects */
+#edu-exp:hover {
+  background-color: var(--pico-teritary);
+  color: white;
+  text-decoration: none;
+  box-shadow: 0 2px 5px rgb(0 0 0 / 0.2);
+}
+/* Handle text switching */
+.hover-text {display: none;}
+#edu-exp:hover .normal-text {display: none;}
+#edu-exp:hover .hover-text {display: inline;}
+hr {
+  border-top: 3px solid var(--pico-muted-border-color);
+}
 #random-qoute {
   max-width: 100%;
   width: 68%;
@@ -26,85 +41,53 @@ section {
   overflow-wrap: break-word;
   /* modern alternative */
 }
-
 @media (max-width: 454px) {
   .container-fluid {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
   }
-
   #random-qoute {
     width: 89%;
   }
-
   #particles-js {
     pointer-events: none;
   }
-  .container-fluid ul li {
-    font-size: 14px;
-    padding: 10px auto;
-  }
 }
-
 #themeToogle i {
   cursor: pointer;
   font-size: 1.4rem;
 }
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
 .container-nav-head {
   height: 100vh;
   font-family: cursive;
 }
-
 #about,
 #skills,
 #contact,
 #projects {
+  margin: 65px auto;
   text-align: center;
 }
-
-#projects details {
-  text-align: left;
-}
-
-details {
-  outline: none;
-}
-
+#projects details {text-align: left;}
+details {outline: none;}
 /* Container for skill badges */
-#skills .badge-container {
+.badge-container {
   display: flex;
   flex-wrap: wrap;
   gap: 0.3rem;
   justify-content: center;
-  padding: 0.8rem 0;
+  padding: 0;
 }
-
 /* Individual badge style */
-#skills .badge {
+.badge {
   color: var(--pico-on-primary);
   border: 1px solid var(--pico-secondary);
   border-radius: 1rem;
   box-shadow: 0 2px 5px rgb(0 0 0 / 0.1);
-  font-size: 16px;
+  font-size: 14px;
   padding: 0.3rem 0.8rem;
-  /* user-select: none; */
   transition: background-color 0.25s ease;
 }
-
-#skills .badge:hover {
-  background-color: var(--pico-primary-dark);
-}
-
 .container-nav-head.bg-img {
   position: relative;
   /* positioning context for particles */
@@ -114,7 +97,6 @@ details {
   overflow: hidden;
   /* hide overflow */
 }
-
 #particles-js {
   position: absolute;
   top: 0;
@@ -123,59 +105,31 @@ details {
   height: 100%;
   z-index: 1;
   /* above bg image but below content */
-  /* so clicks go through to content */
-  /* pointer-events: none;  */
 }
-
 img {
   width: 160px;
   height: 70px;
 }
-
 nav {
   position: fixed;
   top: 8px;
-
   border-radius: 29px;
   z-index: 10;
   border: 1px solid hsla(0, 0%, 100%, 0.2);
   transition: ease 0.4s;
 }
-
-nav li {
-  --pico-nav-element-spacing-vertical: 15px;
-}
-
+nav li {--pico-nav-element-spacing-vertical: 15px;}
 nav img {
   width: 45px;
   height: 45px;
   border-radius: 50px;
 }
-
-i {
-  font-size: 1.98rem;
-}
-
-.projIcon {
-  font-size: 1.98rem;
-}
-
-#projects details i {
-  font-size: 1rem;
-}
-
-article p {
-  font-size: 0.8rem;
-}
-
-article footer a {
-  margin: 0;
-}
-
-.link {
-  font-size: 0.95rem;
-}
-
+i {font-size: 1.98rem;}
+.projIcon {font-size: 1.98rem;}
+#projects details i {font-size: 1rem;}
+article p {font-size: 0.8rem;}
+article footer a {margin: 0;}
+.link {font-size: 0.95rem;}
 .search-box {
   width: 80%;
   margin-left: auto;
@@ -183,68 +137,50 @@ article footer a {
   margin-bottom: 0;
   margin-right: auto;
 }
-
 #goUp {
   position: sticky;
   bottom: 10px;
   left: 0px;
-
   transition: all 0.3s ease;
 }
-
 .qoute {
   position: absolute;
   /* Fix the position at the bottom */
   bottom: 0;
   left: 0;
   width: 100%;
-
   padding: 7px;
 }
-
 .qoute-main {
   padding: 0 8px;
   background-color: hsla(180, 87%, 12%, 0.408);
 }
-
 /* profile info */
-.profileIcon {
-  cursor: pointer;
-}
-
+.profileIcon {cursor: pointer;}
 #profileInfo {
   position: fixed;
   top: 100px;
   right: 10px;
-
   --pico-color: white;
-
   width: 17rem;
   z-index: 99;
   font-size: 0.9rem;
-
   opacity: 0.1;
   transform: translateX(39rem);
   transition: transform 1s, opacity 0.8s;
   --pico-card-background-color: #181c25;
 }
-
-#profileInfo article {
-  --pico-border-radius: 25px;
-}
-
+#profileInfo article {--pico-border-radius: 25px;}
 .floating:hover #profileInfo {
   transform: translateX(0);
   opacity: 0.94;
 }
-
 #contact {
   position: relative;
   cursor: pointer;
   user-select: none;
   font-weight: 600;
 }
-
 .contact-contents {
   width: 45%;
   display: flex;
@@ -254,26 +190,17 @@ article footer a {
   padding: 8px;
   font-weight: bold;
 }
-
 .contact-label {
   position: absolute;
   text-decoration: underline;
 }
-
 .contact-links a {
   visibility: hidden;
   display: inline-block;
   margin: auto 10px;
 }
-
-.contact-contents:hover .contact-label {
-  visibility: hidden;
-}
-
-.contact-contents:hover .contact-links a {
-  visibility: visible;
-}
-
+.contact-contents:hover .contact-label {visibility: hidden;}
+.contact-contents:hover .contact-links a {visibility: visible;}
 .grid-col-2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
